--- a/_notes/100 Public/.obsidian/workspace
+++ b/_notes/100 Public/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "f868ac62143713b0",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -65,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,6 +89,9 @@
   },
   "active": "f868ac62143713b0",
   "lastOpenFiles": [
+    "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
+    "Feed/+ Episodio 04 - La conformación del Estado Nacional (1852-1880) - Ver La Historia.md",
+    "Feed/Episodio 12 - La recuperación de la democracia (1983-1990) - Ver La Historia.md",
     "Feed/Prioritize enablers and blockers.md",
     "Feed/Never brainstorm for a topic.md",
     "Feed/Mac Malayalam Install.md",
