Prueba Renderizado del Expert en el feed

--- a/_notes/100 Public/.obsidian/workspace
+++ b/_notes/100 Public/.obsidian/workspace
@@ -11,7 +11,7 @@
           "state": {
             "file": "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
             "mode": "source",
-            "source": false
+            "source": true
           }
         }
       }
