Eliminado de class="date_button_today" de los botones

--- a/_notes/100 Public/.obsidian/workspace
+++ b/_notes/100 Public/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
+            "file": "Feed/Episodio 12 - La recuperación de la democracia (1983-1990) - Ver La Historia.md",
             "mode": "source",
             "source": true
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
+                "file": "Feed/Episodio 12 - La recuperación de la democracia (1983-1990) - Ver La Historia.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,9 +89,9 @@
   },
   "active": "f868ac62143713b0",
   "lastOpenFiles": [
-    "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
     "Feed/Episodio 12 - La recuperación de la democracia (1983-1990) - Ver La Historia.md",
     "Feed/+ Episodio 04 - La conformación del Estado Nacional (1852-1880) - Ver La Historia.md",
+    "Feed/+ Episodio 01 - El pueblo en armas (1806-1820) - Ver La Historia.md",
     "Feed/Prioritize enablers and blockers.md",
     "Feed/Never brainstorm for a topic.md",
     "Feed/Mac Malayalam Install.md",
