--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ url: "http://www.laverdadcontinua.com/" # the base hostname & protocol for your 
 
 # If you want to install this jekyll in a subpath (eg /digitalgarden) set it here. 
 # Else keep it Empty (DON'T PUT /; Keep it empty)
-baseurl: "http://www.laverdadcontinua.com/"
+baseurl: ""
 
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
